@@ -1,3 +1,12 @@
+2016-02-24  Erik Hetzner  <egh@e6h.org>
+
+	* mime-edit.el (mime-prompt-for-type, mime-prompt-for-type)
+	(mime-prompt-for-encoding): Use default parameter to set default
+	answer.
+	(mime-prompt-for-encoding): Make default optional.
+	(mime-edit-insert-voice): Use `mime-prompt-for-encoding' to prompt
+	user for encoding.
+
 2016-02-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	User is now prompted whether proceed PGP/MIME encryption when
